[fix]: Consertando patch de livro
